# Cansat-2023

./: README.md
CanSat2023/: .cproject  .mxproject  .project  CanSat2023.ioc  Core - Shortcut.lnk  MS5611_legacy.c  MS5611_legacy.h  STM32F401RETX_FLASH.ld  STM32F401RETX_RAM.ld  gpsalgo.c  mainbackup.c  mainidea.c
CanSat2023/Core/Inc/: ADXL345.h  File_Handling.h  FreeRTOSConfig.h  L3G4200D.h  MPU9250_Config.h  MS5611.h  ds18b20.h  ds18b20Config.h  gpio.h  main.h  mmc5883.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  w25qxxConf.h
CanSat2023/Core/Src/: ADXL345.c  File_Handling.c  L3G4200D.c  MPU9250.c  MS5611.c  ds18b20.c  gpio.c  lora_sx1276.c  main.c  mmc5883.c  mpu9255.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  w25qxx.c
CanSat2023/Debug/: CanSat2023.elf  CanSat2023.list  CanSat2023.map  makefile  objects.list
CanSat2023/Debug/Core/Src/: MPU9250.d  MPU9250.su  MS5611.d  MS5611.su  ds18b20.d  ds18b20.su  gpio.d  lora_sx1276.d  lora_sx1276.su  main.d  main.su  onewire.d  onewire.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d  tim.d  tim.su  w25qxx.d
CanSat2023/Release/: CanSat2023.elf  CanSat2023.list  CanSat2023.map  makefile  objects.list  sources.mk
CanSat2023/Release/Core/: MS5611.d
Pikosat/: LoRa.cpp  LoRa.h  Pikosat.ino
Sporadic-react2/: README.md  package-lock.json  package.json
Sporadic-react2/public/: index.html  spootnik2.glb
Sporadic-react2/src/: index.css  index.js
Sporadic-react2/src-tauri/: Cargo.toml  tauri.conf.json
Sporadic-react2/src-tauri/src/: command.rs  main.rs
(+110 files in other folders)
