[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
dirs = "4.0.0"
serde_json = "1.0"
tokio-serial = "5.4.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
thiserror = "1.0"
serialport = "4.2.0"

[dependencies.futures]
version = "0.3"

[dependencies.tokio]
version = "^1.8"
default-features = false
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dev-dependencies.tokio]
version = "^1.8"
features = ["macros", "rt", "process", "time", "fs", "io-util"]
default-features = false


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
rt = ["tokio/rt-multi-thread"]
codec = ["tokio-util/codec"]
